syntax = "proto3";

package models;
option go_package="code.cloudfoundry.org/bbs/models";

import "actual_lrp.proto";
import "error.proto";

message ProtoEvacuationResponse {
  ProtoError error = 1;
  bool keep_container = 2 [json_name = "keep_container"];
}

message ProtoEvacuateClaimedActualLRPRequest {
  ProtoActualLRPKey actual_lrp_key = 1;
  ProtoActualLRPInstanceKey actual_lrp_instance_key = 2;
}

message ProtoEvacuateRunningActualLRPRequest {
  reserved 4; // previously removed ttl value

  ProtoActualLRPKey actual_lrp_key = 1;
  ProtoActualLRPInstanceKey actual_lrp_instance_key = 2;
  ProtoActualLRPNetInfo actual_lrp_net_info = 3;
  repeated ProtoActualLRPInternalRoute actual_lrp_internal_routes = 5;
  map<string, string> metric_tags = 6;
  optional bool Routable = 7;
  string availability_zone = 8 [json_name = "availability_zone"];
}

message ProtoEvacuateStoppedActualLRPRequest {
  ProtoActualLRPKey actual_lrp_key = 1;
  ProtoActualLRPInstanceKey actual_lrp_instance_key = 2;
}

message ProtoEvacuateCrashedActualLRPRequest {
  ProtoActualLRPKey actual_lrp_key = 1;
  ProtoActualLRPInstanceKey actual_lrp_instance_key = 2;
  string error_message = 3 [json_name = "error_message"];
}

message ProtoRemoveEvacuatingActualLRPRequest {
  ProtoActualLRPKey actual_lrp_key = 1;
  ProtoActualLRPInstanceKey actual_lrp_instance_key = 2;
}

message ProtoRemoveEvacuatingActualLRPResponse {
  ProtoError error = 1;
}
